--- a/index.html
+++ b/index.html
@@ -118,10 +118,13 @@
         padding: 10px;
         border-radius: 8px;
         text-align: center;
-        margin-top: 5px;
+        margin-top: 8px;
         margin-left: auto;
         margin-right: auto;
         display: block;
+    }
+    .button_style:hover {
+        cursor: pointer;
     }
     .container {
         display: flex;
