--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <h1 class="container">A Page For Paige</h1>
-    <img class="custom_image" height="50" width="50"src="./img/EmoEmoji.jpeg"/>'
-    <img></body>
+    <img class="custom_image" height="50" width="50"src="./img/EmoEmoji.jpeg"/>
     <div class="container">
         <form method="POST" action="https://formspree.io/f/xnqyavkk">
             <textarea name="message"></textarea>
@@ -138,7 +137,7 @@
         margin-left: auto;
         margin-right: auto;
         margin-top: -20px;
-        margin-bottom: -5px;
+        margin-bottom: 10px;
     }
   </style>
 </body>
