--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     }
     const pickerOptions = { 
         onEmojiSelect: addText, 
+        theme: "light",
         custom: [
             {
                 id: 'paige',
