remove hyphens from paige emoji names

--- a/index.html
+++ b/index.html
@@ -52,43 +52,43 @@
                 emojis: [
                     {
                         id: 'emo-brendan',
-                        name: 'Emo-Brendan',
+                        name: 'Emo Brendan',
                         keywords: ['emo-brendan'],
                         skins: [{ src: './img/EmoEmoji.jpeg' }],
                     },
                     {
                         id: 'emo-paige',
-                        name: 'Emo-Paige',
+                        name: 'Emo Paige',
                         keywords: ['emo-paige'],
                         skins: [{ src: './img/EmoPaige.jpeg' }],
                     },
                     {
                         id: 'emo-cowboy',
-                        name: 'Emo-Cowboy',
+                        name: 'Emo Cowboy',
                         keywords: ['emo-cowboy'],
                         skins: [{ src: './img/EmoCowboy.jpeg' }],
                     },
                     {
                         id: 'angry-paige',
-                        name: 'Angry-Paige',
+                        name: 'Angry Paige',
                         keywords: ['angry-paige'],
                         skins: [{ src: './img/AngryPaige.jpg' }],
                     },
                     {
                         id: 'kpop-paige',
-                        name: 'Kpop-Paige',
+                        name: 'Kpop Paige',
                         keywords: ['kpop-paige'],
                         skins: [{ src: './img/KpopPaige.jpg' }],
                     },
                     {
                         id: 'pretty-paige',
-                        name: 'Pretty-Paige',
+                        name: 'Pretty Paige',
                         keywords: ['pretty-paige'],
                         skins: [{ src: './img/PrettyPaige.jpg' }],
                     },
                     {
                         id: 'sunshine-paige',
-                        name: 'Sunshine-Paige',
+                        name: 'Sunshine Paige',
                         keywords: ['sunshine-paige'],
                         skins: [{ src: './img/SunshinePaige.jpg' }],
                     },
