--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
         </form>
         <div id="emoji-picker"></div>
     </div>
-    <div style="padding:15px;"></div>
+    <!-- <div style="padding:15px;"></div>
     <div class="container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/DEXDDyb6t2o?&autoplay=1&mute=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div> -->
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DEXDDyb6t2o?&autoplay=1&mute=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
+            </div>
+        </div>
     </div>
+  
+  </div>
   <script>
     tinymce.init({
       selector: 'textarea',
@@ -35,11 +48,32 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
   <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+    
     function addText(event) {
         if (event.src) {
             tinymce.activeEditor.execCommand('mceInsertContent', false, '<img height="16" width="16" style="margin-bottom:-2px" src="' + event.src + '"/>');
         } else {
             tinymce.activeEditor.execCommand('mceInsertContent', false, event.native);
+        }
+
+        if (event.id === "fall-for-you") {
+            modal.style.display = "block";
         }
     }
     const pickerOptions = { 
@@ -67,6 +101,12 @@
                         name: 'Emo Cowboy',
                         keywords: ['emo-cowboy'],
                         skins: [{ src: './img/EmoCowboy.jpeg' }],
+                    },
+                    {
+                        id: 'fall-for-you',
+                        name: 'Fall For You',
+                        keywords: ['fall-for-you'],
+                        skins: [{ src: './img/FallForYou.jpeg' }],
                     },
                     {
                         id: 'angry-paige',
@@ -139,6 +179,43 @@
         margin-right: auto;
         margin-top: -20px;
         margin-bottom: 10px;
+    }
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 5; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 600px;
+        height: 320px;
+    }
+
+    /* The Close Button */
+    .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover, .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
     }
   </style>
 </body>
