--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <script src="https://cdn.tiny.cloud/1/s18f3z1sre4d0ylqnxxaen3h6dg81vilt7z4090qmqc735fs/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.tiny.cloud/1/s18f3z1sre4d0ylqnxxaen3h6dg81vilt7z4090qmqc735fs/tinymce/6/tinymce.min.js"
+        referrerpolicy="origin"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     <h1 class="container">A Page For Paige</h1>
-    <img class="custom_image" height="50" width="50"src="./img/EmoEmoji.jpeg"/>
+    <img class="custom_image" height="50" width="50" src="./img/EmoEmoji.jpeg" />
     <div class="container">
         <form method="POST" action="https://formspree.io/f/xnqyavkk">
             <textarea name="message"></textarea>
@@ -24,201 +29,217 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DEXDDyb6t2o?&autoplay=1&mute=0&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
+                <iframe width="560" height="315"
+                    src="https://www.youtube.com/embed/DEXDDyb6t2o?&autoplay=1&mute=0&loop=1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
             </div>
         </div>
     </div>
-  
-  </div>
-  <script>
-    tinymce.init({
-      selector: 'textarea',
-      plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
-      toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
-      tinycomments_mode: 'embedded',
-      tinycomments_author: 'Author name',
-      mergetags_list: [
-        { value: 'First.Name', title: 'First Name' },
-        { value: 'Email', title: 'Email' },
-      ],
-      height: 437,
-      width: 425,
-    });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
-  <script>
-    // Get the modal
-    var modal = document.getElementById("myModal");
 
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-        modal.style.display = "none";
-    }
+    </div>
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            //plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+            //toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ],
+            height: 437,
+            width: 425,
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
+    <script>
+        // Get the modal
+        var modal = document.getElementById("myModal");
 
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-        if (event.target == modal) {
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
             modal.style.display = "none";
         }
-    }
 
-    function addText(event) {
-        if (event.src) {
-            tinymce.activeEditor.execCommand('mceInsertContent', false, '<img height="16" width="16" style="margin-bottom:-2px" src="' + event.src + '"/>');
-        } else {
-            tinymce.activeEditor.execCommand('mceInsertContent', false, event.native);
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
         }
 
-        if (event.id === "fall-for-you") {
-            modal.style.display = "block";
+        function addText(event) {
+            if (event.src) {
+                tinymce.activeEditor.execCommand('mceInsertContent', false, '<img height="16" width="16" style="margin-bottom:-2px" src="' + event.src + '"/>');
+            } else {
+                tinymce.activeEditor.execCommand('mceInsertContent', false, event.native);
+            }
+
+            if (event.id === "fall-for-you") {
+                modal.style.display = "block";
+            }
         }
-    }
-    const pickerOptions = { 
-        onEmojiSelect: addText, 
-        theme: "light",
-        custom: [
-            {
-                id: 'paige',
-                name: 'Paige\'s Emoji Set',
-                emojis: [
-                    {
-                        id: 'emo-brendan',
-                        name: 'Emo Brendan',
-                        keywords: ['emo-brendan'],
-                        skins: [{ src: './img/EmoEmoji.jpeg' }],
-                    },
-                    {
-                        id: 'emo-paige',
-                        name: 'Emo Paige',
-                        keywords: ['emo-paige'],
-                        skins: [{ src: './img/EmoPaige.jpeg' }],
-                    },
-                    {
-                        id: 'emo-cowboy',
-                        name: 'Emo Cowboy',
-                        keywords: ['emo-cowboy'],
-                        skins: [{ src: './img/EmoCowboy.jpeg' }],
-                    },
-                    {
-                        id: 'fall-for-you',
-                        name: 'Fall For You',
-                        keywords: ['fall-for-you'],
-                        skins: [{ src: './img/FallForYou.jpeg' }],
-                    },
-                    {
-                        id: 'angry-paige',
-                        name: 'Angry Paige',
-                        keywords: ['angry-paige'],
-                        skins: [{ src: './img/AngryPaige.jpg' }],
-                    },
-                    {
-                        id: 'kpop-paige',
-                        name: 'Kpop Paige',
-                        keywords: ['kpop-paige'],
-                        skins: [{ src: './img/KpopPaige.jpg' }],
-                    },
-                    {
-                        id: 'pretty-paige',
-                        name: 'Pretty Paige',
-                        keywords: ['pretty-paige'],
-                        skins: [{ src: './img/PrettyPaige.jpg' }],
-                    },
-                    {
-                        id: 'sunshine-paige',
-                        name: 'Sunshine Paige',
-                        keywords: ['sunshine-paige'],
-                        skins: [{ src: './img/SunshinePaige.jpg' }],
-                    },
-                ],
-            },
-        ],
-        categories: ['paige', 'frequent', 'people', 'nature', 'foods', 'activity', 'places', 'objects', 'symbols', 'flags']
-    }
-    const picker = new EmojiMart.Picker(pickerOptions)
-    document.getElementById("emoji-picker").appendChild(picker)
-  </script>
-  <style>
-    body {
-        margin: 4rem auto;
-        padding: 0 2rem;
-        background-color: white;
-        font-family: sans-serif;
-    }
+        const pickerOptions = {
+            onEmojiSelect: addText,
+            theme: "light",
+            custom: [
+                {
+                    id: 'paige',
+                    name: 'Paige\'s Emoji Set',
+                    emojis: [
+                        {
+                            id: 'emo-brendan',
+                            name: 'Emo Brendan',
+                            keywords: ['emo-brendan'],
+                            skins: [{ src: './img/EmoEmoji.jpeg' }],
+                        },
+                        {
+                            id: 'emo-paige',
+                            name: 'Emo Paige',
+                            keywords: ['emo-paige'],
+                            skins: [{ src: './img/EmoPaige.jpeg' }],
+                        },
+                        {
+                            id: 'emo-cowboy',
+                            name: 'Emo Cowboy',
+                            keywords: ['emo-cowboy'],
+                            skins: [{ src: './img/EmoCowboy.jpeg' }],
+                        },
+                        {
+                            id: 'fall-for-you',
+                            name: 'Fall For You',
+                            keywords: ['fall-for-you'],
+                            skins: [{ src: './img/FallForYou.jpeg' }],
+                        },
+                        {
+                            id: 'angry-paige',
+                            name: 'Angry Paige',
+                            keywords: ['angry-paige'],
+                            skins: [{ src: './img/AngryPaige.jpg' }],
+                        },
+                        {
+                            id: 'kpop-paige',
+                            name: 'Kpop Paige',
+                            keywords: ['kpop-paige'],
+                            skins: [{ src: './img/KpopPaige.jpg' }],
+                        },
+                        {
+                            id: 'pretty-paige',
+                            name: 'Pretty Paige',
+                            keywords: ['pretty-paige'],
+                            skins: [{ src: './img/PrettyPaige.jpg' }],
+                        },
+                        {
+                            id: 'sunshine-paige',
+                            name: 'Sunshine Paige',
+                            keywords: ['sunshine-paige'],
+                            skins: [{ src: './img/SunshinePaige.jpg' }],
+                        },
+                    ],
+                },
+            ],
+            categories: ['paige', 'frequent', 'people', 'nature', 'foods', 'activity', 'places', 'objects', 'symbols', 'flags']
+        }
+        const picker = new EmojiMart.Picker(pickerOptions)
+        document.getElementById("emoji-picker").appendChild(picker)
+    </script>
+    <style>
+        body {
+            margin: 4rem auto;
+            padding: 0 2rem;
+            background-color: white;
+            font-family: sans-serif;
+        }
 
-    main {
-        width: 100%;
-    }
-    
-    .button_style {
-        background-color: white;
-        font-size: larger;
-        padding: 10px;
-        border-radius: 8px;
-        text-align: center;
-        margin-top: 8px;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-    .button_style:hover {
-        cursor: pointer;
-    }
-    .container {
-        display: flex;
-        gap: 10px;
-        flex-direction: row ltr;
-        justify-content: center;
-    }
+        main {
+            width: 100%;
+        }
 
-    .custom_image {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: -20px;
-        margin-bottom: 10px;
-    }
-    .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 5; /* Sit on top */
-        padding-top: 100px; /* Location of the box */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    }
+        .button_style {
+            background-color: white;
+            font-size: larger;
+            padding: 10px;
+            border-radius: 8px;
+            text-align: center;
+            margin-top: 8px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
 
-    /* Modal Content */
-    .modal-content {
-        background-color: #fefefe;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 600px;
-        height: 320px;
-    }
+        .button_style:hover {
+            cursor: pointer;
+        }
 
-    /* The Close Button */
-    .close {
-        color: #aaaaaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
+        .container {
+            display: flex;
+            gap: 10px;
+            flex-direction: row ltr;
+            justify-content: center;
+        }
 
-    .close:hover, .close:focus {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
-    }
-  </style>
+        .custom_image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: -20px;
+            margin-bottom: 10px;
+        }
+
+        .modal {
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Stay in place */
+            z-index: 5;
+            /* Sit on top */
+            padding-top: 100px;
+            /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%;
+            /* Full width */
+            height: 100%;
+            /* Full height */
+            overflow: auto;
+            /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0);
+            /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4);
+            /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 600px;
+            height: 320px;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </body>
+
 </html>
-
-
