--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             margin-top: 8px;
             margin-left: auto;
             margin-right: auto;
-            display: block;
+            display: flex;
         }
 
         .button_style:hover {
