remove button styling not working on safari

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
         }
 
         .button_style {
-            background-color: white;
+            /* background-color: white; */
             font-size: larger;
             padding: 10px;
-            border-radius: 8px;
+            /* border-radius: 8px; */
             text-align: center;
             margin-top: 8px;
             margin-left: auto;
