add heated seat emoji

--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
                             keywords: ['sunshine-paige'],
                             skins: [{ src: './img/SunshinePaige.jpg' }],
                         },
+                        {
+                            id: 'heated-seat',
+                            name: 'Heated Seat',
+                            keywords: ['heated-seat'],
+                            skins: [{ src: './img/HeatedSeat.jpeg' }],
+                        },
                     ],
                 },
             ],
