--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="container">A Page For Paige</h1>
+    <h1 class="container">Page's Paige</h1>
     <div class="container emo_hearts">
         <img class="custom_image" height="50" width="50" src="./img/EmoEmoji.jpeg" />
         <div style="font-size: 40px; margin-left: -10px;">❤️</div>
