--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
                             keywords: ['heated-seat'],
                             skins: [{ src: './img/HeatedSeat.jpeg' }],
                         },
+                        {
+                            id: 'octocat-enemy',
+                            name: 'Octocat Enemy',
+                            keywords: ['octocat-enemy'],
+                            skins: [{ src: './img/Octocat_ENEMY.png' }],
+                        },
                     ],
                 },
             ],
